<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru_muda"
    tools:context=".MainActivity">

    <!-- Label Nama -->
    <TextView
        android:id="@+id/labelNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_saya"
        android:textColor="@color/merah_marin"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/logoDadu"
        android:src="@drawable/gambar_dadu"
        app:layout_constraintTop_toBottomOf="@id/labelNama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/gambar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/tombolGanti"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/acak_dadu"
            android:textColor="@color/putih" />

        <Button
            android:id="@+id/urutDadu"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/urut_dadu"
            android:textColor="@color/putih" />

        <Button
            android:id="@+id/tombolReset"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/reset_dadu"
            android:textColor="@color/putih" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gambar">

        <Button
            android:id="@+id/listMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/buttonPindahHalamanListMovie"
            android:textColor="@color/putih" />

        <Button
            android:id="@+id/Kalkulator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/buttonPindahHalamanKalkulator"
            android:textColor="@color/putih" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>